examples/pts/pos/captures.effekt
module examples/pts/pos/captures

effect Eff { def use(): Unit }

def myModule { eff : Eff } = {
  val e = fun() { eff.use(); () };
  def x = unbox e;

  val f: () => Unit at _ = x;
  val g: _ at _ = x
  val h: _ = x
  val i: () => Unit at {eff} = box _ x

  f
}

def main() = {
    ()
}
